# advanced-macros

./: .clang-format  CMakeLists.txt  README.md  example_config.json
app_win/: CMakeLists.txt
app_win/src/: main.cpp
macro_player/: CMakeLists.txt
macro_player/include/macro_player/: actions.hpp  actions_executor.hpp  keystroke_emulator.hpp  keystroke_listener.hpp  logging.hpp  process_launcher.hpp  settings.hpp
macro_player/src/: actions_executor.cpp  keycodes_win.cpp  keycodes_win.hpp  keystroke_emulator_win.cpp  keystroke_listener_win.cpp  logging.cpp  main.cpp  process_launcher_win.cpp  settings.cpp
macro_player/tests/: listener_emulator_tests.cpp  settings_tests.cpp
schema/: CMakeLists.txt
schema/src/: actions.fbs
windows_hook_dll/: CMakeLists.txt  hook.cpp
windows_hook_dll/include/: hook.hpp
